--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste React by Saini Saab",
-  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
@@ -18,6 +17,15 @@
   },
   "homepage": "https://github.com/kishankumar07/namasteReact#readme",
   "devDependencies": {
-    "parcel": "^2.12.0"
-  }
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserslist":[
+    "last 2 Chrome version",
+    "last 2 Firefox version"
+  ]
 }
